css for background and overlay, adds overflow scroll and change position to fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,13 +9,16 @@
 
 .backgroundContainer {
   background-size: cover;
+  background-position: 50%;
   position: absolute;
   /* top: 0;
   left: 0;
   right: 0;
   bottom: 0; */
   width: 100%;
-  height: 100%;
+  min-width: 1200px;
+  height: auto;
+  min-height: 100%;
 }
 
 .overlay {
