--- a/frontend/src/components/navbar.module.css
+++ b/frontend/src/components/navbar.module.css
@@ -1,4 +1,7 @@
 .navbar {
+  width: auto;
+  min-width: 1200px;
+
   height: 60px;
   display: flex;
   justify-content: center;
