--- a/frontend/src/pages/champions.module.css
+++ b/frontend/src/pages/champions.module.css
@@ -1,5 +1,6 @@
 .championsOverlay {
   position: fixed;
+  overflow: scroll;
   top: 60px;
   left: 0;
   width: 100%;
@@ -76,6 +77,7 @@ input[type="text"] {
   align-items: center;
   margin: 10px 10px;
   max-width: 1280px;
+  margin-bottom: 100px;
 }
 
 .imageContainer img {
