--- a/frontend/src/pages/leaderboard.module.css
+++ b/frontend/src/pages/leaderboard.module.css
@@ -1,5 +1,5 @@
 .leaderboardOverlay {
-  position: fixed;
+  position: absolute;
   top: 60px;
   left: 0;
   width: 100%;
@@ -9,7 +9,7 @@
 }
 
 .overlay {
-  position: fixed;
+  position: absolute;
   top: 60px;
   left: 0;
   width: 100%;
