--- a/frontend/src/pages/welcome.module.css
+++ b/frontend/src/pages/welcome.module.css
@@ -8,7 +8,7 @@
 } */
 
 .overlay {
-  position: fixed;
+  position: absolute;
   top: 60px;
   left: 0;
   width: auto;
